--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -1,15 +1,23 @@
 .news{
 	overflow: hidden;
+	.container{position: relative;}
+	
+	
 	.news-slider{
 		@media(max-width:2399px){
-		width: calc(50% + 50vw);}
+		width: calc(100% + 60px);}
+	}
+	.h2{
+		position: absolute;
+		left: 0;
+		top:0;
+		z-index: 3;
 	}
 }
 
 .news-slide{
+	column-gap: 145px;
 	align-items: flex-end;
-	
-	justify-content: space-between;
 	.news-slider__text{
 		width: 315px;
 		flex-shrink: 0;
@@ -19,7 +27,8 @@
 		.link-medium{padding-top: 10px;padding-bottom: 1px; width:fit-content}
 	}
 	.news-slider__img{
-		width: 950px;
+		overflow: hidden;
+		flex-grow: 1;
 		img{
 			width: 100%;
 			height: 646px;
@@ -28,4 +37,28 @@
 		}
 		
 	}
+}
+.news-slider.owl-carousel{
+	.owl-dots {
+		left: 365px;
+		.owl-dot{background-color: $sec2;}
+		@media (max-width: 1199px) {
+			
+		}
+	}
+		.owl-dots:after,.owl-dots:before{
+				position: absolute;
+				content: '';
+				width: 1px;
+				background-color: $sec2;
+				height: 35%;
+				
+				top: -100px;
+				z-index: 2;
+			}
+		
+		.owl-dots:before {
+			top: auto;
+			bottom: -100px;
+		}
 }
