--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -9,8 +9,18 @@ section.news
 					.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
 					.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
 					a(href="").link-medium Смотреть новость
+					
+					//======= кнопка отображается на моб версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="../img/spriteSvg.svg#svg-link")
+				
 				.news-slider__img
 					img(src="./img/news-slider.webp", width="950" alt="img")
+					
+					//======= кнопка отображается на десктоп версии =======
 					.btn-wrapper
 						a(href="#!").btn-outline
 							span К новостям
@@ -23,6 +33,14 @@ section.news
 					.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
 					.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
 					a(href="").link-medium Смотреть новость
+					
+					//======= кнопка отображается на моб версии =======
+					.btn-wrapper
+						a(href="#!").btn-outline
+							span К новостям
+							svg.svg-link
+								use(href="../img/spriteSvg.svg#svg-link")
+				
 				.news-slider__img
 					img(src="./img/header-bg11.webp", width="950" alt="img")
 					.btn-wrapper
@@ -39,6 +57,14 @@ section.news
 						.txt-semi Делегация Северной Осетии приняла&nbsp;участие в работе форума «Управленческое мастерство: развитие региональных команд»
 						.txt-clamp Масштабное мероприятие прошло в Пятигорске на площадке Северо-Кавказского института — филиала Российской академии народного хозяйства и госслужбы. Проект стартовал в 2016 году. Он направлен на развитие управленческих команд субъектов РФ и внедрение инвестиционного стандарта. По мнению организаторов, это помогает намного лучше наладить контакты внутри территории, и, главное, с региональными инвесторами. Пятигорск является четвёртой площадкой, аналогичные форумы уже прошли на Дальнем Востоке, в Сибири, в Поволжье. В форуме приняли участие управленцы из 19 регионов Южного и Северо-Кавказского округов.
 						a(href="").link-medium Смотреть новость
+
+						//======= кнопка отображается на моб версии =======
+						.btn-wrapper
+							a(href="#!").btn-outline
+								span К новостям
+								svg.svg-link
+									use(href="../img/spriteSvg.svg#svg-link")
+					
 					.news-slider__img
 						img(src="./img/news-slider.webp", width="950" alt="img")
 						.btn-wrapper
