--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -15,6 +15,7 @@
 	color: white;
 	font-family: $semi;
 	svg{fill: #fff;}
+	.svg-link{width: 18px; height: 18px;}
 	@media (max-width: 1199px) {
 	  height: 46px;
 	  font-size: 14px;
