--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -87,7 +87,7 @@ footer.footer#footer
 						li
 							a(href="#!") Команда региона
 						li
-							a(href="#!") Новости и события
+							a(href="news.html") Новости и события
 						li
 							a(href="#!") Контакты
 						li
