--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,4 +1,4 @@
-.header-slider-wrapper
+header.header.header-slider-wrapper
 	.header-slider.owl-carousel
 		.header-slider__item.fly-center(style="background-image: url(./img/header-bg11.webp)")
 			.gradient-box.mb-30
