--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -128,7 +128,7 @@ section{
 		.h2{margin-bottom: 20px;}
 	}
 }
-.header-slider-wrapper{
+.header-slider-wrapper, .header{
 	padding-left: 449px;
 	@media(max-width:1919px) {
 		padding-left: 300px;
