--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
 @import "blocks/_pagination.scss";
 @import "blocks/_components.scss";
 @import "blocks/_project-card.scss";
-//@import "blocks/";
+@import "blocks/_news-card.scss";
 //@import "blocks/";
 //@import "blocks/";
 //@import "blocks/";
@@ -20,8 +20,10 @@
 @import "sections/_main-menu.scss";
 @import "sections/_invest-projects.scss";
 @import "sections/_news.scss";
-//@import "sections/";
-//@import "sections/";
+@import "sections/_header-inner.scss";
+
+@import "pages/_news.scss/";
+
 //@import "sections/";
 @import "sections/_footer.scss";
 
