--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,9 +9,9 @@ block content
 			a(href="main.html")
 				span Главная
 				
-			a(href="#!")
-				span Отдельная страница
-			a(href="#!")
-				span Отдельная страница
+			a(href="news.html")
+				span Новости и события
+			a(href="content-page.html")
+				span Content page
 block variables
 	-var title = "Page";
