--- a/src/pug/sections/_main-menu.pug
+++ b/src/pug/sections/_main-menu.pug
@@ -45,7 +45,7 @@
 				.main-menu-item
 					a(href="#!").main-menu-link Команда региона
 				.main-menu-item
-					a(href="#!").main-menu-link Новости и события
+					a(href="news.html").main-menu-link Новости и события
 				.main-menu-item
 					a(href="#!").main-menu-link Кабинет инвестора
 						svg.svg-user
