--- a/src/pug/sections/_news-page-cards.pug
+++ b/src/pug/sections/_news-page-cards.pug
@@ -17,3 +17,11 @@ section.news-content
 
 		+news-card(6, 20, 04, 'Делегация Северной Осетии посетила Кабардино-Балкарию')
 			p Делегация Министерства экономического развития РСО-Алания во главе с руководителем ведомства Зауром Кучиевым посетила Кабардино-Балкарскую Республику. Целью визита стал обмен опытом работы с инвесторами. Кроме того, обсуждались особенности внедрения регионального инвестиционного стандарта, конкурентные преимущества республик.В сопровождении первого заместителя председателя Правительства КБР Муаеда Кунижева представители Северной Осетии осмотрели объекты, функционирование которых стало возможным благодаря инвесторам: швейную фабрику, фруктохранилище и туристический комплекс. Первое предприятие по заказу АО «Военторг» занимается выпуском обмундирования и спецодежды. Второе относится к пищевой промышленности: готовой продукцией являются не только яблоки, но и пюре из них, в том числе для детского питания. В планах — производство пастилы. В туркомплекс «Верхние Голубые Озёра» входят гостиница, ресторан и инфраструктура для спокойного семейного отдыха.
+
+		.btn-wrapper.fly-center
+			a(href="#!").btn-outline
+				span Загрузить еще новости
+				svg.svg-add
+					use(href="../img/spriteSvg.svg#svg-add")
+			
+			.news-counter 6 / 563
