--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,10 +21,12 @@
 @import "sections/_invest-projects.scss";
 @import "sections/_news.scss";
 @import "sections/_header-inner.scss";
+@import "sections/_fotorama.scss";
+
 
 @import "pages/_news.scss/";
 
-//@import "sections/";
+
 @import "sections/_footer.scss";
 
 
