--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -1,3 +1,4 @@
 include ../mixins/_form.pug
 include ../mixins/_header-slider.pug
 include ../mixins/_news-card.pug
+include ../mixins/_header-inner.pug
