--- a/src/scss/blocks/_news-card.scss
+++ b/src/scss/blocks/_news-card.scss
@@ -28,11 +28,17 @@
 		span{
 			font-size: 18px;
 			color: $sec1;font-family: $bold;font-weight: bold;
+			@media (max-width: 991px) {
+				font-size: 14px;
+			}
 		}
 		span:first-child{
 			font-size: 54px;
 			color: $ac3;
 			line-height: 0.9;
+			@media (max-width: 1199px) {
+				font-size: 30px;
+			}
 			
 		}
 	}
@@ -49,7 +55,14 @@
 		}
 	}
 	&__text{
-		.body-3{margin-bottom: 20px; color: $pr;}transition: .5s;
+		.body-3{
+			margin-bottom: 20px; color: $pr;
+			transition: .5s;
+			@media (max-width: 991px) {
+			  margin-bottom: 10px;
+			  font-size: 14px;
+			}
+		}
 		p{
 			display: -webkit-box;
 			-webkit-line-clamp: 7;
@@ -57,7 +70,22 @@
 			overflow: hidden;
 			
 			color: $sec;
+			@media (max-width: 1919px) {
+				
+				-webkit-line-clamp: 6;
+			}
+			@media (max-width: 767px) {
+				-webkit-line-clamp: 4;
+				font-size: 12px;
+			}
 		}
+	}
+	@media (max-width: 991px) {
+		flex-direction: column;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		row-gap: 20px;
+		&__info {flex-direction: row;}
 	}
 }
 .news-card:hover{
