--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -13,11 +13,16 @@ html(lang="ru")
 		//=======убрать перевод цифр в номер телефона на ios  и safari ======
 		meta(name="format-detection" content="telephone=no")
 		
-		link(rel="stylesheet", href="./fonts/fonts.css")
+		//- link(rel="stylesheet", href="./fonts/fonts.css")
+
+		//==== owl carousel ========
 		link(rel="stylesheet", href="./libs/owlCarousel/owl.carousel.min.css")
-		//- link(rel="stylesheet", href="./libs/owlCarousel/owl.theme.default.css")
+		
+		//==== fotorama ========
+		link(rel="stylesheet", href="./libs/fotorama/fotorama.css")
 		
 		link(rel="stylesheet", href="./css/main.css")
+		
 		title !{title}
 
 		//======= подключение шрифтов в тег head  ускоряет загрузку страницы ======
@@ -61,7 +66,11 @@ html(lang="ru")
 		
 		//=============== owl.carousel ===================
 		script(src="./libs/owlCarousel/owl.carousel.min.js")
-				
+		
+		//=============== fotorama  ===================
+		script(src="./libs/fotorama/fotorama.js")
+		
+		
 		//=============== мои скрипты ===================
 		
 		script(src="./js/form.js")
