--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -1,24 +1,24 @@
-.content-page
-	.container
+section.content-page
+	.container-slim
 		.product-fotorama
 			.fotorama(data-nav='thumbs')
-				a(href='./img/fotorama/product1-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product1-big.webp' )
 					img(src='./img/fotorama/product1-thumb.webp' width="157" height="94")
 				
-				a(href='./img/fotorama/product2-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product2-big.webp' )
 					img(src='./img/fotorama/product2-thumb.webp' width="157" height="94")
 
-				a(href='./img/fotorama/product3-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product3-big.webp' )
 					img(src='./img/fotorama/product3-thumb.webp' width="157" height="94")
 				
-				a(href='./img/fotorama/product4-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product4-big.webp' )
 					img(src='./img/fotorama/product4-thumb.webp' width="157" height="94")
 
-				a(href='./img/fotorama/product5-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product5-big.webp' )
 					img(src='./img/fotorama/product5-thumb.webp' width="157" height="94")
 				
-				a(href='./img/fotorama/product6-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product6-big.webp' )
 					img(src='./img/fotorama/product6-thumb.webp' width="157" height="94")
 
-				a(href='./img/fotorama/product7-big.webp' width="1120" height="640")
+				a(href='./img/fotorama/product7-big.webp' )
 					img(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
