--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -109,6 +109,22 @@ input[type="submit"] {
 		width: calc(100% - 40px);
 	}
 }
+.container-slim{
+	width: 1120px;
+	margin-left: auto;
+	margin-right: auto;
+	@media(max-width:1919px) {
+		width: calc(100% - 100px);
+	}
+
+	@media(max-width:767px) {
+		width: calc(100% - 60px);
+	}
+
+	@media(max-width:574px) {
+		width: calc(100% - 40px);
+	}
+}
 section{
 	padding-top: 100px;
 	padding-bottom: 100px;
