--- a/src/scss/sections/_fotorama.scss
+++ b/src/scss/sections/_fotorama.scss
@@ -1,11 +1,21 @@
 .fotorama{
 	.fotorama__stage{
 		margin-bottom: 20px;
+		border-radius: 20px;
+		overflow: hidden;
 		img{
 			width: 100%;
 			height: 640px;
 			object-fit: cover;
 			border-radius: 20px;
 		}
+	}
+	.fotorama__thumb-border{
+		border:2px solid $ac1;
+		border-radius: 6px;
+	}
+	.fotorama__nav__frame--thumb{border-radius: 6px;}
+	.fotorama__nav__frame--thumb img{
+		border-radius: 6px;
 	}
 }
