--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -1,5 +1,10 @@
 section.content-page
 	.container-slim
+		h2 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
+		h3 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
+		
+		p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
+		
 		.product-fotorama
 			.fotorama(data-nav='thumbs')
 				a(href='./img/fotorama/product1-big.webp' )
@@ -22,3 +27,12 @@ section.content-page
 
 				a(href='./img/fotorama/product7-big.webp' )
 					img(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
+
+		p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
+
+		.txt-accent
+			p На базе хлебозавода планируется увеличить выпуск хлебобулочных изделий до 648т. в год. Организовать производство сыра, объем производства 125т. в год, натурального живого кваса 900т. в год и создать логистическое направление с различными температурными режимами от – 18С до +20.
+
+		.txt-warning
+			.txt-bold В ассортименте все виды классических осетинских пирогов:
+			.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын» 
