--- a/src/scss/sections/_fotorama.scss
+++ b/src/scss/sections/_fotorama.scss
@@ -3,9 +3,12 @@
 		margin-bottom: 20px;
 		border-radius: 20px;
 		overflow: hidden;
+		@media (max-width: 1199px) {
+		margin-bottom: 10px;
+		}
 		img{
 			width: 100%;
-			height: 640px;
+			height: 100%!important;
 			object-fit: cover;
 			border-radius: 20px;
 		}
@@ -17,5 +20,20 @@
 	.fotorama__nav__frame--thumb{border-radius: 6px;}
 	.fotorama__nav__frame--thumb img{
 		border-radius: 6px;
+		object-fit: cover;
+		width: 100%!important;
+		height: 100%!important;
+		
 	}
+	// .fotorama__nav__frame,.fotorama__thumb-border{
+	// 	width: 157px !important;
+	// 	height: 94px !important;
+	// 	margin-left: 3px!important;
+	// 	margin-right: 3px!important;
+	// 	@media (max-width: 767px) {
+	// 	  width: 100px!important;
+	// 	  height:60px!important;
+
+	// 	}
+	// }
 }
