--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -1,4 +1,4 @@
-section.content-page
+section.content-page.body-3
 	.container-slim
 		h2 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
 		h3 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
@@ -30,9 +30,17 @@ section.content-page
 
 		p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
 
-		.txt-accent
+		.txt-accent.body-3
 			p На базе хлебозавода планируется увеличить выпуск хлебобулочных изделий до 648т. в год. Организовать производство сыра, объем производства 125т. в год, натурального живого кваса 900т. в год и создать логистическое направление с различными температурными режимами от – 18С до +20.
 
 		.txt-warning
 			.txt-bold В ассортименте все виды классических осетинских пирогов:
-			.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын» 
+			.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын»
+		
+		p Производство готовой замороженной выпечки - это актуальное и перспективное направление деятельности. Сегмент готовых блюд очень интенсивно развивается. В ближайших планах компании запуск франшизы – точек быстрого питания «Кухня народов России» от 2 кв.м. в торговых центрах, фудкортов, создание дополнительных рабочих мест во всех регионах – партнеры ИП, расширение ассортимента продукции: мороженое, пицца, блины. Создание службы доставки горячей продукции в регионах. Открытие мини–пекарен в сетевых магазинах.
+		p Логистическое направление реализуется совместно со Сбербанк лизинг. Планируется закупить до 20 автомобилей грузоподъемностью от 1 до 10т.
+		.video
+			.video-poster
+				img(src="./img/video.webp", alt="img")
+			iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+
