--- a/src/pug/mixins/_news-card.pug
+++ b/src/pug/mixins/_news-card.pug
@@ -11,7 +11,7 @@ mixin news-card(img, sp1, sp2, title)
 
 			.news-card__link.fl-center
 				svg.svg-link
-					use(href="../img/spriteSvg.svg#svg-link")
+					use(href="./img/spriteSvg.svg#svg-link")
 		.news-card__text
 			.body-3 !{title}
 			block
