--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -9,7 +9,7 @@ footer.footer#footer
 				button(type="button").btn-accent
 					span Подписаться на новости
 					svg.svg-plus
-						use(href="../img/spriteSvg.svg#svg-mail")
+						use(href="./img/spriteSvg.svg#svg-mail")
 		
 		.footer-menu
 			//==== один список меню ====
