--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -13,7 +13,7 @@ header.header.header-slider-wrapper
 					.gradient-box.gradient-box--special
 						.gradient-box__content.fly-center
 							.gradient-box__icon.fl-center
-								img(src="../img/icons/target.svg", width="56" height="56" alt="alt")
+								img(src="./img/icons/target.svg", width="56" height="56" alt="alt")
 
 							.body-3 Корпорация развития - «одно окно» для инвесторов
 					+header-slider('icon2', 'Более 600 площадок для размещения производства')
