--- a/src/pug/sections/_invest-projects.pug
+++ b/src/pug/sections/_invest-projects.pug
@@ -207,4 +207,4 @@ section.invest-projects
 			a(href="#!").btn-accent
 				span Все проекты
 				svg.svg-plus
-					use(href="../img/spriteSvg.svg#svg-plus")
+					use(href="./img/spriteSvg.svg#svg-plus")
