--- a/src/pug/sections/_news-page-cards.pug
+++ b/src/pug/sections/_news-page-cards.pug
@@ -1,27 +1,27 @@
 section.news-content
 	.container
-		+news-card(1, 12, 07, 'Минэкономразвития России разработало инвестиционную карту России')
+		+news-card(1, 12, '07', 'Минэкономразвития России разработало инвестиционную карту России')
 			p Министерство экономического развития Российской Федерации совместно с Правительством Москвы разработало Инвестиционную карту России. На карте в пилотном режиме пользователям доступны для выбора инвестиционные объекты регионов СКФО. Портал станет единой точкой входа для инвесторов и предпринимателей при выборе места для открытия бизнеса в субъектах СКФО. В дальнейшем на карту будут добавлены сведения и о других федеральных округах.«Инвестиционная карта России сможет стать единым окном для инвесторов со всей страны и дружественных государств. Регионы играют ключевую роль в наполнении и актуализации данных инвестиционной карты.
 		
-		+news-card(2, 24, 05, 'Делегация Северной Осетии посетила Чеченскую Республику')
+		+news-card(2, 24, '05', 'Делегация Северной Осетии посетила Чеченскую Республику')
 			p Министр экономического развития РСО-Алания Кучиев Заур Агубеевич в сопровождении заместителя экономического развития РСО-Алания Туаева Георгия и генерального директора АО «Корпорация инвестиционного развития РСО-Алания» Гугкаева Таймураза посетили дружественную Чеченскую Республику в рамках образовательной программы «Управленческое мастерство: развитие региональных команд» РАНХиГС.Рустам Шаптукаев министр экономического, территориального развития и торговли Чеченской Республики провёл рабочую встречу с делегацией.В сопровождении заместителя министра экономического, территориального развития и торговли Чеченской Республики Асламбека Межидова гости побывали сегодня на известном далеко за пределами республики ведущем предприятии — ООО «Теплостройпроект — С» холдинга RIM Group, которое специализируется на изготовлении металлоконструкций, теплоэнергетического оборудования, модульных домокомплектов, а также и в тепличном комплексе «ЮгАгроХолдинг».
 		
-		+news-card(3, 24, 05, 'Северную Осетию посетила делегация Кабардино-Балкарии')
+		+news-card(3, 24, '05', 'Северную Осетию посетила делегация Кабардино-Балкарии')
 			p Северную Осетию посетила делегация Кабардино-Балкарии во главе с заместителем министра экономического развития Темирканом Баждуговым и генеральным директором Корпорации развития КБР Ахматом Чочаевым. На встрече с министром экономического развития РСО-Алания Зауром Кучиевым речь шла о развитии двух республик и сотрудничестве в разных сферах. Также гости побывали на предприятиях «Токар» (производство инновационной добавки к бетону), «РусМодус-Фид» (производство кормов и комбикормов) и «Константа-7» (производство безалкогольных напитков). На следующий день делегация Северной Осетии отправилась в Чеченскую Республику. После рабочей встречи с министром экономического, территориального развития и торговли Рустамом Шаптукаевым представители РСО-Алания посетили тепличный комплекс «ЮгАгроХолдинг» и ООО «Теплостройпроект‑С» холдинга RIM Group, которое специализируется на изготовлении металлоконструкций, теплоэнергетического оборудования, модульных домокомплектов. Как было отмечено, RIM Group сейчас занимается строительством двух объектов и в Северной Осетии.
 
-		+news-card(4, '02', 05, 'Максим Решетников заинтересовался спаржей из Северной Осетии')
+		+news-card(4, '02', '05', 'Максим Решетников заинтересовался спаржей из Северной Осетии')
 			p Министр экономического развития РФ Максим Решетников посетил стенд Северной Осетии на Кавказской инвестиционной выставке, которая открылась сегодня в г. Минеральные Воды.Его сопровождали заместители Сергей Назаров и Дмитрий Вахруков, а также директор департамента социально-экономического развития СКФО Игорь Храновский.О содержании экспозиции республики и представленных проектах рассказал министр экономического развития РСО-Алания Заур Кучиев. На стенде развёрнуты лайтбоксы с подробной информацией о прорывных проектах, которые реализуются в рамках модели экономического развития республики. Они включают 11 подпроектов в таких сферах, как туризм, транспортно-логистический и агропромышленный комплексы общей стоимостью 64 млрд рублей. По итогам 2022 года объём вложенных средств превысил 20 млрд рублей, создано около 600 рабочих мест. По итогам 2023 года число рабочих мест составит порядка 700.
 		
-		+news-card(5, 21, 04, 'В Северной Осетии малый и средний бизнес будут развивать совместно с Корпорацией МСП')
+		+news-card(5, 21, '04', 'В Северной Осетии малый и средний бизнес будут развивать совместно с Корпорацией МСП')
 			p Министерство экономического развития Российской Федерации совместно с Правительством Москвы разработало Инвестиционную карту России. На карте в пилотном режиме пользователям доступны для выбора инвестиционные объекты регионов СКФО. Портал станет единой точкой входа для инвесторов и предпринимателей при выборе места для открытия бизнеса в субъектах СКФО. В дальнейшем на карту будут добавлены сведения и о других федеральных округах.«Инвестиционная карта России сможет стать единым окном для инвесторов со всей страны и дружественных государств. Регионы играют ключевую роль в наполнении и актуализации данных инвестиционной карты.
 
-		+news-card(6, 20, 04, 'Делегация Северной Осетии посетила Кабардино-Балкарию')
+		+news-card(6, 20, '04', 'Делегация Северной Осетии посетила Кабардино-Балкарию')
 			p Делегация Министерства экономического развития РСО-Алания во главе с руководителем ведомства Зауром Кучиевым посетила Кабардино-Балкарскую Республику. Целью визита стал обмен опытом работы с инвесторами. Кроме того, обсуждались особенности внедрения регионального инвестиционного стандарта, конкурентные преимущества республик.В сопровождении первого заместителя председателя Правительства КБР Муаеда Кунижева представители Северной Осетии осмотрели объекты, функционирование которых стало возможным благодаря инвесторам: швейную фабрику, фруктохранилище и туристический комплекс. Первое предприятие по заказу АО «Военторг» занимается выпуском обмундирования и спецодежды. Второе относится к пищевой промышленности: готовой продукцией являются не только яблоки, но и пюре из них, в том числе для детского питания. В планах — производство пастилы. В туркомплекс «Верхние Голубые Озёра» входят гостиница, ресторан и инфраструктура для спокойного семейного отдыха.
 
 		.btn-wrapper.fly-center
 			a(href="#!").btn-outline
 				span Загрузить еще новости
 				svg.svg-add
-					use(href="../img/spriteSvg.svg#svg-add")
+					use(href="./img/spriteSvg.svg#svg-add")
 			
 			.news-counter 6 / 563
