--- a/src/pug/sections/_news.pug
+++ b/src/pug/sections/_news.pug
@@ -15,7 +15,7 @@ section.news
 						a(href="#!").btn-outline
 							span К новостям
 							svg.svg-link
-								use(href="../img/spriteSvg.svg#svg-link")
+								use(href="./img/spriteSvg.svg#svg-link")
 				
 				.news-slider__img
 					img(src="./img/news-slider.webp", width="950" alt="img")
@@ -25,7 +25,7 @@ section.news
 						a(href="#!").btn-outline
 							span К новостям
 							svg.svg-link
-								use(href="../img/spriteSvg.svg#svg-link")
+								use(href="./img/spriteSvg.svg#svg-link")
 			//===== single slide ====
 			.news-slide.fl-block
 				.news-slider__text.fl-column
@@ -39,7 +39,7 @@ section.news
 						a(href="#!").btn-outline
 							span К новостям
 							svg.svg-link
-								use(href="../img/spriteSvg.svg#svg-link")
+								use(href="./img/spriteSvg.svg#svg-link")
 				
 				.news-slider__img
 					img(src="./img/header-bg11.webp", width="950" alt="img")
@@ -47,7 +47,7 @@ section.news
 						a(href="#!").btn-outline
 							span К новостям
 							svg.svg-link
-								use(href="../img/spriteSvg.svg#svg-link")
+								use(href="./img/spriteSvg.svg#svg-link")
 
 			.news-slider.owl-carousel
 				//===== single slide ====
@@ -63,7 +63,7 @@ section.news
 							a(href="#!").btn-outline
 								span К новостям
 								svg.svg-link
-									use(href="../img/spriteSvg.svg#svg-link")
+									use(href="./img/spriteSvg.svg#svg-link")
 					
 					.news-slider__img
 						img(src="./img/news-slider.webp", width="950" alt="img")
@@ -71,4 +71,4 @@ section.news
 							a(href="#!").btn-outline
 								span К новостям
 								svg.svg-link
-									use(href="../img/spriteSvg.svg#svg-link")
+									use(href="./img/spriteSvg.svg#svg-link")
