--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -44,3 +44,28 @@ section.content-page.body-3
 				img(src="./img/video.webp", alt="img")
 			iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
 
+		//====== вопросы ответы ========
+		include ../sections/_faq.pug
+		.benefits
+			.benefits-block
+				//===single card ====
+				a(href="#").benefit-card
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
+					.txt-medi Инвестиционные проекты
+
+				//===single card ====
+				a(href="#").benefit-card
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
+					.txt-medi Инвестиционные площадки
+				//===single card ====
+				a(href="#").benefit-card
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
+					.txt-medi Инновационные проекты
+				//===single card ====
+				a(href="#").benefit-card
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
+					.txt-medi Инвестиционные предложения
