--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import "blocks/_components.scss";
 @import "blocks/_project-card.scss";
 @import "blocks/_news-card.scss";
+
+
 //@import "blocks/";
 //@import "blocks/";
 //@import "blocks/";
@@ -22,6 +24,8 @@
 @import "sections/_news.scss";
 @import "sections/_header-inner.scss";
 @import "sections/_fotorama.scss";
+@import "sections/_faq.scss";
+@import "sections/_benefits.scss";
 
 
 @import "pages/_news.scss/";
