--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -113,8 +113,8 @@ input[type="submit"] {
 	width: 1120px;
 	margin-left: auto;
 	margin-right: auto;
-	@media(max-width:1919px) {
-		width: calc(100% - 100px);
+	@media(max-width:1599px) {
+		width: calc(100% - 180px);
 	}
 
 	@media(max-width:767px) {
@@ -179,6 +179,12 @@ section{
 	margin-bottom: 30px;
 	@media (max-width: 767px) {
 	  margin-bottom: 10px;
+	}
+}
+.mb-40{
+	margin-bottom: 40px;
+@media (max-width: 767px) {
+		margin-bottom: 20px;
 	}
 }
 .btn-wrapper{
