--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -43,6 +43,10 @@
 	font-size: 30px;
 	line-height: 1.2;
 }
+.body-6{
+	font-size: 12px;
+	line-height: 1.4;
+}
 .txt-upper{text-transform: uppercase;}
 .txt-bold{
 	font-family: $bold;
