--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "sections/_fotorama.scss";
 @import "sections/_faq.scss";
 @import "sections/_benefits.scss";
+@import "sections/_team.scss";
 
 
 @import "pages/_news.scss/";
