--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -42,30 +42,13 @@ section.content-page.body-3
 		.video
 			.video-poster
 				img(src="./img/video.webp", alt="img")
-			iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+			//- iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
 
 		//====== вопросы ответы ========
 		include ../sections/_faq.pug
-		.benefits
-			.benefits-block
-				//===single card ====
-				a(href="#").benefit-card
-					svg.svg-folder
-						use(href="./img/spriteSvg.svg#svg-folder")
-					.txt-medi Инвестиционные проекты
+		
+		//====== преимущества ========
+		include ../sections/_benefits.pug
 
-				//===single card ====
-				a(href="#").benefit-card
-					svg.svg-folder
-						use(href="./img/spriteSvg.svg#svg-folder")
-					.txt-medi Инвестиционные площадки
-				//===single card ====
-				a(href="#").benefit-card
-					svg.svg-folder
-						use(href="./img/spriteSvg.svg#svg-folder")
-					.txt-medi Инновационные проекты
-				//===single card ====
-				a(href="#").benefit-card
-					svg.svg-folder
-						use(href="./img/spriteSvg.svg#svg-folder")
-					.txt-medi Инвестиционные предложения
+		//====== команда ========
+		include ../sections/_team.pug
