--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -156,7 +156,7 @@ section{
 	}
 
 }
- .fl-block,.fly-center,.fly-center, .fl-center, .fl-column,.flex-link{
+ .fl-block,.flx-center,.fly-center, .fl-center, .fl-column,.flex-link{
 	display: flex;
 	
 }
