fix team slider

--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -42,7 +42,8 @@ section.content-page.body-3
 		.video
 			.video-poster
 				img(src="./img/video.webp", alt="img")
-			//- iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+			
+			iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
 
 		//====== вопросы ответы ========
 		include ../sections/_faq.pug
