--- a/src/pug/sections/_team.pug
+++ b/src/pug/sections/_team.pug
@@ -1,7 +1,7 @@
 .team
 	.team-slider-wrapper
 		.team-slider-col.fl-column
-			.h3 Инвестиционная команда
+			.h3.mb-40 Инвестиционная команда
 			.team-slider-nav.fly-center
 				.btn-left.team-slider-prev
 					svg.chevron-left
