--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -42,6 +42,12 @@
 .h3, h3{
 	font-size: 30px;
 	line-height: 1.2;
+	@media (max-width: 1599px) {font-size: 24px;}
+	@media (max-width: 1439px) {font-size: 20px;}
+	@media (max-width: 767px) {
+	  font-size: 16px;
+	  
+	}
 }
 .body-6{
 	font-size: 12px;
